add header mobile

--- a/index.html
+++ b/index.html
@@ -99,5 +99,33 @@
         </footer>
       </div>
     </div>
+
+    <div class="mobile">
+      <header>
+        <div class="logo-mobile">
+          <a href="#" target="_blank">
+            <img src="./img/logo.webp" alt="" />
+          </a>
+
+          <a class="link1" href="#" target="_blank">Site Oficial</a>
+          <a class="link2" href="#" target="_blank">Facebook</a>
+          <a class="link3" href="#" target="_blank">Whatsapp</a>
+          <a class="link4" href="#" target="_blank">Instagram</a>
+        </div>
+      </header>
+
+      <div class="store">
+        <p>
+          DDtank Brasil agora é disponível para Android e iOS. Baixe agora
+          mesmo:
+        </p>
+        <a href="#" target="_blank">
+          <img src="./img/playstore-btn.webp" alt="" />
+        </a>
+        <a href="#" target="_blank">
+          <img src="./img/appstore-btn.webp" alt="" />
+        </a>
+      </div>
+    </div>
   </body>
 </html>
