--- a/index.html
+++ b/index.html
@@ -126,6 +126,69 @@
           <img src="./img/appstore-btn.webp" alt="" />
         </a>
       </div>
+
+      <div class="tablet">
+        <div class="warning">
+          <div class="whatsapp-icon">
+            <img src="./img/whatsapp-icon.webp" alt="" />
+
+            <div class="message">
+              <p>
+                Não identificamos seu número do Whatsapp. Por favor, atualize
+                agora mesmo para concorrer a R$ 5.000,00 em recargas e confirmar
+                suas recompensas.
+              </p>
+            </div>
+          </div>
+
+          <div class="form">
+            <form>
+              <input type="number" placeholder="Digite seu Whatsapp aqui..." />
+              <button type="submit">Confirmar!</button>
+            </form>
+          </div>
+
+          <div class="banner-sucess">
+            <img src="./img/banner-sucess.webp" alt="" />
+          </div>
+
+          <div class="vip">
+            <p>
+              Faça parte do
+              <span>SORTEIO de R$ 5.000,00 EM RECARGAS</span>, entre no
+              <span>GRUPO VIP do WhatsApp</span>, vagas limitadas:
+            </p>
+
+            <a href="#" target="_blank">Obter Acesso ao GRUPO VIP</a>
+          </div>
+
+          <div class="code">
+            <p>
+              Querido jogador, seu pré-registro foi realizado com sucesso.<br />
+              <span>Para confirmar e garantir suas recompensas</span>, basta
+              gerar seu código de coleta no botão abaixo:
+            </p>
+
+            <a href="#" target="_blank">Código Exclusivo de Prêmios</a>
+          </div>
+
+          <div class="infos">
+            <p>
+              Você estará jogando o maior, melhor e mais nostálgico DDTank de
+              todos os tempos, com a qualidade Brasil Games que todos já
+              conhecem...
+            </p>
+          </div>
+
+          <div class="cta">
+            <h3>
+              ...Estamos online, entre agora mesmo!
+              <br />
+              <span>S12: Mundo Mobile</span>
+            </h3>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
